--- a/src/components/ContentComponents/BannerComponent/index.scss
+++ b/src/components/ContentComponents/BannerComponent/index.scss
@@ -1,5 +1,4 @@
 .banner {
-  width: 100%;
   position: relative;
   margin-top: 20px;
 
@@ -36,6 +35,7 @@
         font-size: 25px;
         letter-spacing: 1px;
         margin: 10px 0;
+        display: flex;
         img{
           width: 25px;
           height: 25px;
@@ -55,6 +55,7 @@
         font-weight: 500;
         position: absolute;
         bottom: 0;
+        display: flex;
         img {
           margin-left: 10px;
           width: 15px;
