--- a/src/components/ContentComponents/Header/Header.scss
+++ b/src/components/ContentComponents/Header/Header.scss
@@ -1,6 +1,5 @@
 .header {
-  width: 100%;
-  height: 100%;
+  height: 90px;
   display: flex;
   padding: 1vw 0;
   justify-content: space-between;
@@ -9,6 +8,7 @@
     width: 5%;
     color: $black-color;
     font-size: 25px;
+    cursor: pointer;
   }
   span {
     display: contents;
