--- a/src/components/ContentComponents/ProductsSection/index.scss
+++ b/src/components/ContentComponents/ProductsSection/index.scss
@@ -1,3 +1,108 @@
-.products{
+.products {
+  display: flex;
+  flex-direction: column;
+  height: 300px;
+ 
+  width: calc(60vw - 80px);
+  .box {
+    padding: 0 15px;
+    height: auto;
+    cursor: pointer;
+    width: 100%;
+
+    &__card {
+      height: 400px;
+      display: flex !important;
+      flex-direction: column;
+      height: auto;
+      background-color: #fefefe;
+      .illustration {
+        border-radius: 20px;
+        position: relative;
+        img {
+          border-radius: 20px;
+          width: 100%;
+          height: 200px;
+          z-index: -1;
+        }
+        .timer {
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          background-color: #f8f8f8;
+          color: $black-color;
+          font-size: 15px;
+          padding: 15px;
+          border-radius: 0 20px 0 20px;
+          span {
+            display: flex;
+            font-weight: 600;
+            p {
+              font-weight: 400;
+            }
+          }
+        }
+      }
+
+      .name {
+        font-size: 22px;
+        color: $black-color;
+        font-weight: 600px;
+        margin: 10px 0;
+      }
+
+      .description {
+        display: flex;
+        align-items: center;
+        font-size: 16px;
+        font-weight:500;
+        margin: 10px 0;
+
+        svg {
+          font-weight:500;
+          height: 16px;
+          width: 16px;
+          color: $black-color;
+        }
+        .qualification {
+          color: #b5aea5;
+          margin: 0 10px;
+        }
+        .price {
+          color: #b5aea5;
+        }
+      }
+    }
+
+    .short-texts {
+      text-align: center;
+      margin: 0;
+    }
+  }
+
+  @media (max-width: 2560px) {
+    width: calc(35vw - 0px);
+  }
+  @media (max-width: 1920px) {
+    width: calc(45vw - 0px);
+  }
+  @media (max-width: 1440px) {
+    width: calc(100vw - 80px);
+  }
+/*   @media (max-width: 320px) {
+    width: calc(100vw - 80px);
+  }
   
+  @media (max-width: 768px) {
+    width: calc(100vw - 80px);
+  }
+    
+  @media (max-width: 1024px) {
+    width: calc(100vw - 80px);
+  } */
+
+
+  
+
+
 }
