--- a/src/components/SideComponents/Articles/index.scss
+++ b/src/components/SideComponents/Articles/index.scss
@@ -46,8 +46,7 @@
   &__products {
     margin: 0 30px;
     padding: 10px 0 40px 0;
-    max-height: 350px;
-    overflow: auto;
+
 
     .item {
       margin: 30px 0;
@@ -145,8 +144,9 @@
     }
 
     .check {
+      margin-left:20px ;
       border-radius: 10px 0 0 10px;
-      padding: 30px;
+      padding: 20px;
       background-color: $yellow-color;
       color: $black-color;
       font-weight: 500;
