--- a/src/components/ContentComponents/BannerComponent/index.scss
+++ b/src/components/ContentComponents/BannerComponent/index.scss
@@ -16,7 +16,7 @@
     align-items: center;
     .image {
       padding: 0 10% 0 3%;
-      width: 25%;
+      flex: 0.3;
       img {
         width: auto;
         height: 230px;
@@ -24,7 +24,7 @@
     }
 
     .description {
-      width: 65%;
+      flex: 0.7;
       padding: 5% 0 5% 5%;
       display: flex;
       flex-direction: column;
@@ -36,7 +36,7 @@
         letter-spacing: 1px;
         margin: 10px 0;
         display: flex;
-        img{
+        img {
           width: 25px;
           height: 25px;
         }
@@ -56,10 +56,26 @@
         position: absolute;
         bottom: 0;
         display: flex;
+        right: 100px;
         img {
           margin-left: 10px;
           width: 15px;
           height: 15px;
+        }
+      }
+    }
+
+    @media (max-width: 768px) {
+      .image {
+        display: none;
+      }
+      .description {
+        padding: 50px 20px ;
+        flex: 1;
+        a{
+          bottom: 20px;
+          right: 10px;
+
         }
       }
     }
