--- a/src/components/ContentComponents/Header/Header.scss
+++ b/src/components/ContentComponents/Header/Header.scss
@@ -25,7 +25,7 @@
     background: #f8f8f8;
     padding: 15px;
     border-radius: 20px;
-    width: 70%;
+    flex: 0.7;
 
     img {
       margin: 0 5px;
