--- a/src/components/ContentComponents/ProductsSection/index.scss
+++ b/src/components/ContentComponents/ProductsSection/index.scss
@@ -2,8 +2,16 @@
   display: flex;
   flex-direction: column;
   height: 300px;
- 
-  width: calc(60vw - 80px);
+  margin-bottom: 50px;
+  &--lg {
+    width: calc(100vw - 80px);
+  }
+  &--xs {
+    width: calc(70vw - 180px);
+    @media (max-width: 1024px) {
+      width: calc(100vw - 80px);
+    }
+  }
   .box {
     padding: 0 15px;
     height: auto;
@@ -55,11 +63,11 @@
         display: flex;
         align-items: center;
         font-size: 16px;
-        font-weight:500;
+        font-weight: 500;
         margin: 10px 0;
 
         svg {
-          font-weight:500;
+          font-weight: 500;
           height: 16px;
           width: 16px;
           color: $black-color;
@@ -79,30 +87,4 @@
       margin: 0;
     }
   }
-
-  @media (max-width: 2560px) {
-    width: calc(35vw - 0px);
-  }
-  @media (max-width: 1920px) {
-    width: calc(45vw - 0px);
-  }
-  @media (max-width: 1440px) {
-    width: calc(100vw - 80px);
-  }
-/*   @media (max-width: 320px) {
-    width: calc(100vw - 80px);
-  }
-  
-  @media (max-width: 768px) {
-    width: calc(100vw - 80px);
-  }
-    
-  @media (max-width: 1024px) {
-    width: calc(100vw - 80px);
-  } */
-
-
-  
-
-
 }
