--- a/src/sass/base/generic.scss
+++ b/src/sass/base/generic.scss
@@ -1,9 +1,6 @@
 .container__lg{
-  width: 100%;
-  height: 100%;
   max-width: 1440px;
-  display: flex;
-  justify-content: center;
+  margin: 0 auto;
 }
 
 
