--- a/src/scenes/Home/Home.scss
+++ b/src/scenes/Home/Home.scss
@@ -1,8 +1,9 @@
 .home {
   width: 100%;
+  max-width: 100vw;
   height: 100%;
   display: flex;
-  flex-direction: row-reverse;
+  flex-direction: row;
   justify-content: center;
   &__content {
     flex: 1;
@@ -50,6 +51,13 @@
           margin: 0 5px;
         }
       }
+      @media (max-width: 728px) {
+        flex-direction: column;
+        align-items: flex-start;
+        .title{
+          margin-bottom: 30px ;
+        }
+      }
     }
   }
 
@@ -60,12 +68,11 @@
     -webkit-animation: slide-in-blurred-right 0.6s cubic-bezier(0.23, 1, 0.32, 1) both;
     animation: slide-in-blurred-right 0.6s cubic-bezier(0.23, 1, 0.32, 1) both;
 
-    svg{
-      font-size: 27px;
-      margin-top: 20px;
-      color: $black-color;
-    }
+  
     @media (max-width: 1024px) {
+      background: #fdfdfbfa;
+      box-shadow:  -5px 5px 10px #c7c7c7,
+             5px -5px 10px #f9f9f9;
       position: fixed;
       right: 0;
       z-index: 10;
