--- a/src/components/ContentComponents/CategorySection/index.scss
+++ b/src/components/ContentComponents/CategorySection/index.scss
@@ -4,6 +4,9 @@
   padding: 5px 0 40px 0;
   &--lg{
     width: calc(100vw - 80px);
+    @media (min-width: 1920px) {
+      width: calc(70vw - 180px);
+    }
   }
   &--xs{
     width: calc(70vw - 180px);
