--- a/src/components/ContentComponents/ProductsSection/index.scss
+++ b/src/components/ContentComponents/ProductsSection/index.scss
@@ -5,6 +5,9 @@
   margin-bottom: 50px;
   &--lg {
     width: calc(100vw - 80px);
+    @media (min-width: 1920px) {
+      width: calc(70vw - 180px);
+    }
   }
   &--xs {
     width: calc(70vw - 180px);
